feat: Rename and test seedDatabaseFromApi
